// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Theme test correctly 1`] = `
<Text
  style={
    [
      {
        "fontSize": 24,
      },
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      {
        "fontFamily": "DMMedium",
      },
      undefined,
      {
        "color": "#ffffff",
      },
      undefined,
    ]
  }
>
  Snapshot test!
</Text>
`;

exports[`renders ThemedBadge correctly with a title 1`] = `
<View
  style={{}}
>
  <ViewManagerAdapter_ExpoLinearGradient
    colors={
      [
        4279383126,
        4284826401,
      ]
    }
    style={
      {
        "borderRadius": 50,
        "padding": 10,
      }
    }
  >
    <Text
      style={
        [
          undefined,
          undefined,
          undefined,
          {
            "fontSize": 16,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          {
            "fontFamily": "DMMedium",
          },
          undefined,
          {
            "color": "#ffffff",
          },
          undefined,
        ]
      }
    >
      Hello World
    </Text>
  </ViewManagerAdapter_ExpoLinearGradient>
</View>
`;
